hilited tab for selected form

--- a/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.html
+++ b/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.html
@@ -1,11 +1,11 @@
 <mat-nav-list class="SideNavigationList">
-  <a mat-list-item routerLink="/progress" class="SideNavigationTarget">
+  <a mat-list-item routerLink="/progress" routerLinkActive="active-list-item" class="SideNavigationTarget">
     <mat-icon matListIcon>timeline</mat-icon>
   </a>
-  <a mat-list-item routerLink="/runners" class="SideNavigationTarget">
+  <a mat-list-item routerLink="/runners" routerLinkActive="active-list-item" class="SideNavigationTarget">
     <mat-icon matListIcon>directions_run</mat-icon>
   </a>
-  <a mat-list-item routerLink="/exchanges" class="SideNavigationTarget">
+  <a mat-list-item routerLink="/exchanges" routerLinkActive="active-list-item" class="SideNavigationTarget">
     <mat-icon matListIcon>location_on</mat-icon>
   </a>
 </mat-nav-list>
