--- a/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.scss
+++ b/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.scss
@@ -1,3 +1,7 @@
+.active-list-item {
+  background: white !important; /* Note: You could also use a custom theme */
+  color: #ffad77 !important;
+}
 
 .SideNavigationList {
   //display: flex;
@@ -16,18 +20,5 @@
 
 :host /deep/ .mat-list-item-content {
   padding: 10!important;
-}
-
-.SideNavigationLogoff {
-  position: absolute;
-  bottom: 30px;
-  left: 0;
-}
-
-.SideNavigationBottomStrip {
-  background:black;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
