--- a/UX/src/app/components/progress/progress.component.html
+++ b/UX/src/app/components/progress/progress.component.html
@@ -1,44 +1,34 @@
 <div style="width:100%;">
-  <div>
-    
+  <div style="height: 45px;">
+    &nbsp;
   </div>
 
   <mat-divider style="width:100%; margin-top:10px;"></mat-divider>
 
   <mat-table #table [dataSource]="dataSource" class="mat-elevation-z0">
 
-    <ng-container matColumnDef="legMapColumn">
-        <mat-header-cell *matHeaderCellDef> Map </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-            <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['legMap']" type="string" placeholder="map">
-            </mat-form-field>
-        </mat-cell>
+    <ng-container matColumnDef="legOrderColumn">
+        <mat-header-cell *matHeaderCellDef> # </mat-header-cell>
+        <mat-cell *matCellDef="let row">{{row.currentData.id}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="distanceColumn">
         <mat-header-cell *matHeaderCellDef> Distance </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-            <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['distance']" type="number" placeholder="distance">
-            </mat-form-field>
-        </mat-cell>
+        <mat-cell *matCellDef="let row">{{row.currentData.distance}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="difficultyColumn">
         <mat-header-cell *matHeaderCellDef> Difficulty </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-            <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['difficulty']" type="number" placeholder="difficulty">
-            </mat-form-field>
-        </mat-cell>
+        <mat-cell *matCellDef="let row">{{row.currentData.difficulty}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="runner1Name">
         <mat-header-cell *matHeaderCellDef> Runner 1 </mat-header-cell>
         <mat-cell *matCellDef="let row"> 
             <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['runner1Name']" type="string" placeholder="runner 1">
+                <mat-select [formControl]="row.validator.controls['runner1Id']" (selectionChange)="onRunnerChange($event, 1)">
+                    <mat-option *ngFor="let r of _foundation.runners" [value]="r.id">{{r.displayName}}</mat-option>
+                </mat-select>
             </mat-form-field>
         </mat-cell>
     </ng-container>
@@ -47,21 +37,19 @@
         <mat-header-cell *matHeaderCellDef> Runner 2 </mat-header-cell>
         <mat-cell *matCellDef="let row"> 
             <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['runner2Name']" type="string" placeholder="runner 2">
+                <mat-select [formControl]="row.validator.controls['runner2Id']" (selectionChange)="onRunnerChange($event, 2)">
+                    <mat-option *ngFor="let r of _foundation.runners" [value]="r.id">{{r.displayName}}</mat-option>
+                </mat-select>
             </mat-form-field>
         </mat-cell>
     </ng-container>
     
     <ng-container matColumnDef="runner1Cell">
         <mat-header-cell *matHeaderCellDef> Cell Runner 1 </mat-header-cell>
-        <mat-cell *matCellDef="let row"> 
-            <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['runner1Cell']" type="string" placeholder="cell">
-            </mat-form-field>
-        </mat-cell>
+        <mat-cell *matCellDef="let row">{{row.currentData.runner1Cell}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="pace">
+    <ng-container matColumnDef="paceColumn">
         <mat-header-cell *matHeaderCellDef> Pace </mat-header-cell>
         <mat-cell *matCellDef="let row"> 
             <mat-form-field floatLabel='never'>
@@ -70,58 +58,54 @@
         </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="startTime">
+    <ng-container matColumnDef="startTimeColumn">
         <mat-header-cell *matHeaderCellDef> Leg Start </mat-header-cell>
         <mat-cell *matCellDef="let row">
             <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['startTime']" type="string" placeholder="start time">
+                <input matInput [formControl]="row.validator.controls['startTime']" type="time" placeholder="start time">
             </mat-form-field>
         </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="endTime">
+    <ng-container matColumnDef="endTimeColumn">
         <mat-header-cell *matHeaderCellDef> Leg End </mat-header-cell>
         <mat-cell *matCellDef="let row">
             <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['endTime']" type="string" placeholder="end time">
+                <input matInput [formControl]="row.validator.controls['endTime']" type="time" placeholder="end time">
             </mat-form-field>
         </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="legTime">
+    <ng-container matColumnDef="legTimeColumn">
         <mat-header-cell *matHeaderCellDef> Leg Time </mat-header-cell>
         <mat-cell *matCellDef="let row">
             <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['legTime']" type="string" placeholder="leg time">
+                <input matInput [formControl]="row.validator.controls['legTime']" type="time" placeholder="leg time">
             </mat-form-field>
         </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="truePace">
+    <ng-container matColumnDef="truePaceColumn">
         <mat-header-cell *matHeaderCellDef> Leg Pace </mat-header-cell>
-        <mat-cell *matCellDef="let row">
-            <mat-form-field floatLabel='never'>
-                <input matInput [formControl]="row.validator.controls['truePace']" type="string" placeholder="leg pace">
-            </mat-form-field>
-        </mat-cell>
+        <mat-cell *matCellDef="let row">{{row.currentData.truePace}}</mat-cell>
     </ng-container>
 
-<ng-container matColumnDef="actionsColumn">
-    <mat-header-cell *matHeaderCellDef>
-        <mat-icon>edit</mat-icon>
-    </mat-header-cell>
-    <mat-cell *matCellDef="let row">
-      <button *ngIf="!row.editing && selectedRowIndex == row.id" mat-icon-button color="primary" focusable="false" (click)="EditRow(row)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button *ngIf="row.editing" mat-icon-button color="primary" focusable="false" (click)="SaveRowEdit(row)">
-        <mat-icon>save_alt</mat-icon>
-      </button>
-      <button *ngIf="row.editing" mat-icon-button color="primary" focusable="false" (click)="CancelRowEdit(row)">
-        <mat-icon>clear</mat-icon>
-      </button>
-    </mat-cell>
-  </ng-container>
+    <ng-container matColumnDef="actionsColumn">
+        <mat-header-cell *matHeaderCellDef>
+            <mat-icon>edit</mat-icon>
+        </mat-header-cell>
+        <mat-cell *matCellDef="let row">
+        <button *ngIf="!row.editing && selectedRowIndex == row.id" mat-icon-button focusable="false" (click)="EditRow(row)">
+            <mat-icon>edit</mat-icon>
+        </button>
+        <button *ngIf="row.editing" mat-icon-button focusable="false" (click)="SaveRowEdit(row)">
+            <mat-icon>save_alt</mat-icon>
+        </button>
+        <button *ngIf="row.editing" mat-icon-button focusable="false" (click)="CancelRowEdit(row)">
+            <mat-icon>clear</mat-icon>
+        </button>
+        </mat-cell>
+    </ng-container>
 
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
