--- a/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.html
+++ b/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.html
@@ -8,4 +8,7 @@
   <a mat-list-item routerLink="/exchanges" routerLinkActive="active-list-item" class="SideNavigationTarget">
     <mat-icon matListIcon>location_on</mat-icon>
   </a>
+  <a mat-list-item routerLink="/leg" routerLinkActive="active-list-item" class="SideNavigationTarget">
+    <mat-icon matListIcon>trending_up</mat-icon>
+  </a>
 </mat-nav-list>
