--- a/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.scss
+++ b/UX/src/app/components/side-navigation-widget/side-navigation-widget.component.scss
@@ -1,6 +1,8 @@
 .active-list-item {
   background: white !important; /* Note: You could also use a custom theme */
   color: #ffad77 !important;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
 .SideNavigationList {
@@ -19,6 +21,6 @@
 }
 
 :host /deep/ .mat-list-item-content {
-  padding: 10!important;
+  padding: 1!important;
 }
 
